# gkiw-danger-zone

./: .gitignore  Cargo.toml  LICENSE  README.md  enable-touchpad.org  log_config.yaml
resources/objects/cockpit/: cockpit.mtl  cockpit_old.mtl
resources/objects/hud/: lock_rectangle.mtl
resources/objects/mig21/: mig21.blend  mig21.mtl
resources/objects/missile/: missile.mtl
resources/objects/particle/: particle.mtl
resources/objects/skybox/: skybox.blend  skybox.mtl
resources/objects/terrain/: terrain.mtl  terrain2.mtl  terrain_new.mtl
src/: macros.rs  main.rs  tests.rs
src/audio/: audio.rs  audio_manager.rs  messages.rs  mod.rs  sound.rs
src/cg/: camera.rs  consts.rs  light.rs  mod.rs  model.rs  particles.rs  shader.rs  terrain.rs  texture.rs  transformation.rs  vertex.rs
src/game/: chunk.rs  drawable.rs  enemies.rs  enemy.rs  game.rs  game_sounds.rs  guns.rs  id_gen.rs  matrix_fmt.rs  missile.rs  missile_guidance.rs  mod.rs  modeled.rs  particle_generation.rs  player.rs  targeting_data.rs  targeting_sounds.rs  terrain.rs
src/game/flight/: aircraft.rs  control_surfaces.rs  mod.rs  spec.rs  steerable.rs
src/game/hud/: hud.rs  mod.rs
src/shaders/: hud_fragment.glsl  light.fs  light_fs.glsl  light_vs.glsl  no_light_fs.glsl  no_light_vs.glsl  particle.fs  particle.vs  particle_fs.glsl
