[package]
name = "danger-zone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.51.0"
cgmath = "0.16.1"
gl = "0.10.0"
image = "0.19.0"
tobj = "0.1.6"
num = "0.2.0"
rand = "0.5.5"
itertools = "0.10.5"
lazy_static = "1.4.0"
paste = "1.0.12"
log = "0.4.17"
log4rs = "1.2.0"
worldgen = "0.5.3"
rayon = "1.7.0"
cpu-time = "1.0.0"
