[package]
name = "danger-zone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.51.0"
cgmath = "0.16.1"
gl = "0.10.0"
image = "0.19.0"
tobj = "0.1.6"
num = "0.2.0"
rand = "0.5.5"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.2.0"
worldgen = "0.5.3"
rayon = "1.7.0"
cpu-time = "1.0.0"
itertools = "0.10.5"
bezier-nd = "0.5.0"
geo-nd = "0.5.0"
vek = "0.15.10"
ambisonic = "0.4.1"
mp3-duration = "0.1.10"
